--- a/app/src/main/res/layout/activity_select_service.xml
+++ b/app/src/main/res/layout/activity_select_service.xml
@@ -15,19 +15,29 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:layout_marginTop="10dp"
+        android:textStyle="bold"
         android:textColor="#000"
         android:layout_gravity="center"
         android:textSize="25dp" />
 
     <TextView
         android:id="@+id/tvAddress"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_marginTop="16dp"
-        android:text=""
-        android:layout_gravity="center"
-        android:textSize="20dp"
+        android:layout_margin="10dp"
+        android:text="Address"
+        android:gravity="center"
+        android:textSize="18dp"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="Select any cleaning service: "
+        android:gravity="center"
+        android:textSize="15dp"
         android:textStyle="bold" />
 
 
